--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ ul {
 
 /* components */
 
-.task-title {
+/* .task-title {
   font-size: 20px;
   font-style: italic;
   font-weight: 500;
@@ -71,7 +71,7 @@ ul {
 }
 
 /* form styles */
-.contact-form {
+/* .contact-form {
   display: flex;
   flex-direction: column;
   width: 600px;
@@ -84,9 +84,9 @@ ul {
   border: 1px solid #cccccc;
   padding-left: 20px;
   margin-bottom: 20px;
-}
+} */
 
-.contact-form-btn {
+/* .contact-form-btn {
   margin-top: 20px;
 }
 
@@ -100,19 +100,20 @@ ul {
 
 span {
   text-decoration: underline;
-}
+} */
+*/
 
 /* Box */
-.box {
+/* .box {
   width: 50px;
   height: 50px;
   border: 2px dashed red;
   margin: 10px;
-}
+} */
 
 /* ! */
 
-body {
+/* body {
   font-family: Arial, sans-serif;
   max-width: 600px;
   margin: 40px auto;
@@ -134,45 +135,34 @@ button {
 }
 .error {
   color: red;
-}
+} */
 
 /* !!!!!!!!! */
 
-.gallery {
-  display: grid;
-  /* Створюємо 3 рівні колонки */
-  grid-template-columns: repeat(3, 1fr);
-  /* Створюємо 2 рядки по 300px (висоту можна змінити) */
-  grid-template-rows: repeat(2, 300px);
-  /* Відстань між фото */
-  gap: 10px;
+
+
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
-.gallery__link {
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  display: block; /* Важливо, щоб посилання займало всю клітинку */
+.input {
+  width: 200px;
 }
 
-.gallery__img {
-  width: 100%;
-  height: 100%;
-  /* Щоб картинки не розтягувались, а заповнювали простір */
-  object-fit: cover;
-  display: block;
-  transition: transform 0.3s ease; /* Додамо трохи ефекту при наведенні */
+.select {
+  width: 150px;
 }
 
-.gallery__img:hover {
-  transform: scale(1.02); /* Легке збільшення при наведенні */
+.btn {
 }
-/* СНІГ */
-#snow {
-  position: fixed;
-  inset: 0;
-  z-index: 9999;
-  pointer-events: none;
-  width: 100%;
-  height: 100%;
+
+.result {
+  border: 1px solid #b0dfbe;
+  max-width: 200px;
+  margin: 20px auto;
+  padding: 10px;
 }
