--- a/css/styles.css
+++ b/css/styles.css
@@ -25,144 +25,61 @@ ul {
   padding: 0;
 }
 
-/* components */
-
-/* .task-title {
-  font-size: 20px;
-  font-style: italic;
-  font-weight: 500;
-  text-decoration: underline;
-  margin-bottom: 100px;
-}
-
-.container {
-  width: 1440px;
-  margin: 0 auto;
-  padding: 0px 40px;
-}
-
-.module-title {
-  text-align: center;
-}
-
-.number-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.number {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  font-weight: 700;
-
-  margin: 5px;
-}
-
-.even {
-  background-color: #8bc34a;
-}
-
-.odd {
-  background-color: #ffed3b;
-}
-
-/* form styles */
-/* .contact-form {
-  display: flex;
-  flex-direction: column;
-  width: 600px;
-  margin: 0 auto;
+.task {
+  margin: 20px auto;
   padding: 20px;
-  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-}
-.contact-form-input {
-  height: 40px;
-  border: 1px solid #cccccc;
-  padding-left: 20px;
-  margin-bottom: 20px;
-} */
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  max-width: 400px;
+  text-align: left;
 
-/* .contact-form-btn {
-  margin-top: 20px;
-}
-
-.success {
-  outline: 3px solid greenyellow;
-}
-
-.error {
-  outline: 3px solid red;
-}
-
-span {
-  text-decoration: underline;
-} */
-*/
-
-/* Box */
-/* .box {
-  width: 50px;
-  height: 50px;
-  border: 2px dashed red;
-  margin: 10px;
-} */
-
-/* ! */
-
-/* body {
-  font-family: Arial, sans-serif;
-  max-width: 600px;
-  margin: 40px auto;
-  text-align: center;
-}
-input {
-  padding: 10px;
-  width: 60%;
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-button {
-  padding: 10px 20px;
-  font-size: 18px;
-}
-#weather {
-  margin-top: 30px;
-  font-size: 24px;
-}
-.error {
-  color: red;
-} */
-
-/* !!!!!!!!! */
-
-
-
-
-.form {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  flex-direction: column;
+
+  position: relative;
+}
+
+.wrap {
+  display: flex;
+  gap: 10px;
 }
 
 .input {
   width: 200px;
+  outline: none;
 }
 
-.select {
-  width: 150px;
+@keyframes btnAni {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
 
-.btn {
+.btn:hover {
+  animation: alternate btnAni 0.5s ease-in-out infinite;
 }
 
-.result {
-  border: 1px solid #b0dfbe;
-  max-width: 200px;
-  margin: 20px auto;
-  padding: 10px;
+.list {
+}
+
+.theme {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: 1px solid rgb(10, 72, 113);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  color: rgb(10, 72, 113);
+}
+
+.dark {
+  background-color: #121212;
+  color: #f1f1f1;
 }
