--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ button {
   cursor: pointer;
 }
 
-section {
+/* section {
   padding: 50px 0;
   text-align: center;
 }
@@ -58,16 +58,13 @@ ul {
   100% {
     transform: scale(1.1);
   }
-}
+} */
 
-.btn:hover {
+/* .btn:hover {
   animation: alternate btnAni 0.5s ease-in-out infinite;
-}
+} */
 
-.list {
-}
-
-.theme {
+/* .theme {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -82,4 +79,8 @@ ul {
 .dark {
   background-color: #121212;
   color: #f1f1f1;
+} */
+
+.done {
+  text-decoration: line-through;
 }
