--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,11 @@ common * {
 
 body {
   background-color: #ffffff;
-  font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
+  font:
+    1.2em / 1.5 Helvetica Neue,
+    Helvetica,
+    Arial,
+    sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -234,8 +238,29 @@ ul {
   border: 2px solid rgb(206, 206, 206);
 } */
 
-#js-result {
+/* #js-result {
   margin-top: 20px;
   font-size: 18px;
   color: #333333;
+} */
+
+/* ! */
+
+/* HTML: <div class="loader"></div> */
+/* .loader {
+  width: fit-content;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 30px;
+  padding-bottom: 8px;
+  background: linear-gradient(currentColor 0 0) 0 100%/0% 3px no-repeat;
+  animation: l2 2s linear infinite;
 }
+.loader:before {
+  content: "Loading...";
+}
+@keyframes l2 {
+  to {
+    background-size: 100% 3px;
+  }
+} */
