--- a/css/styles.css
+++ b/css/styles.css
@@ -264,3 +264,28 @@ ul {
     background-size: 100% 3px;
   }
 } */
+
+/* ! */
+
+.loader {
+  width: fit-content;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding-bottom: 8px;
+  background: linear-gradient(currentColor 0 0) 0 100%/0% 3px no-repeat;
+  animation: l2 2s linear infinite;
+  color: green;
+}
+.loader:before {
+  content: "Loading...";
+}
+@keyframes l2 {
+  to {
+    background-size: 100% 3px;
+  }
+}
+
+.hidden {
+  display: none;
+}
