--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ ul {
 
 /* ! */
 
-.loader {
+/* .loader {
   width: fit-content;
   font-weight: bold;
   font-family: sans-serif;
@@ -288,4 +288,4 @@ ul {
 
 .hidden {
   display: none;
-}
+} */
